fix: body scroll on IOS when menu is open

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -14,9 +14,8 @@ body {
     margin: 0 auto;
 }
 
-
-
-
-
-
-
+body.hiddenScroll {
+    overflow-y: hidden;
+   position: fixed;
+   width: 100%;
+}
